# cpp-raytracer

./: .gitignore  CMakeLists.txt  README.md  camera.h  main.cpp  rtw_stb_image.h
geometry/: OBJ.h  aabb.h  colour.h  mesh_3d_model.h  quad.h  ray.h  sphere.h  triangle.h  vec2.h  vec3.h
hittable/: bvh.h  hittable.h  hittable_list.h  sphere.h
material/: dielectric.h  diffuse_light.h  isotropic.h  lambertian.h  material.h  metal.h
texture/: checker_texture.h  constant_medium.h  image_texture.h  noise_texture.h  perlin.h  solid_colour.h  texture.h
utils/: common.h  interval.h  onb.h  pdf.h
